ircv3_parse_derive/tests/ui/de/fail/unnamed_missing_value.stderr
error: `tag` requires a value
 --> tests/ui/de/fail/unnamed_missing_value.rs:4:30
  |
4 | struct MissingTagValue(#[irc(tag)] String);
  |                              ^^^

error: `tag_flag` requires a value
 --> tests/ui/de/fail/unnamed_missing_value.rs:7:34
  |
7 | struct MissingTagFlagValue(#[irc(tag_flag)] String);
  |                                  ^^^^^^^^
